Fixed case issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Singleton.js"
+  "name": "singleton.js"
 , "version": "0.1.0"
 , "description": "Creates a singleton from a function constructor."
 , "homepage": "https://github.com/corymartin/singleton.js"
